--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ asgiref==3.8.1
 attrs==23.2.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
-Django==5.0.6
+Django==4.2
+gunicorn==20.1.0
 frozenlist==1.4.1
 idna==3.7
 multidict==6.0.5
